Update Title Sistem > Aplikasi

--- a/SPK CIMB.html
+++ b/SPK CIMB.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem SPK Kredit - CIMB Niaga</title>
+    <title>Aplikasi SPK Kredit - CIMB Niaga</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -849,4 +849,5 @@
 
     </script>
 </body>
+
 </html>
